
  History

  __.__.2020:
  - xms block move function speed-up.
  - optionally place page dir at the end of first memory block.
  - return DX=0 if emb allocation fails (XMS spec).
  29.10.2020: v3.50
  - fixed: if a memory block beyond 4 GB was reallocated and had to be
    "moved" (because its size increased and there was no free space "behind"
    it), its new location was below the 4 GB barrier.
  27.10.2020:
  - fixed: block move with length > 2 GB failed due to signed comparison.
  26.10.2020:
  - fixed: cpuid check for PSE-36 used bit 16 instead of bit 17.
  - cleaned source (use prototypes & invoke)
  - added option /SUPERMAX=xxx.
  - removed option /NOX2MAX32.
  - block move function in V86 mode supports memory beyond 4GB
    if the EMM is Jemm386 v5.80+.
  25.10.2020:
  - block move overlap check works for entire 40-bit address space.
  25.10.2020:
  - ensured that no memory beyond the 1 TB barrier is used.
  23.10.2020:
  - fixed: block move crossing a 4 GB barrier may have lost data.
  21.10.2020:
  - initial version.
